Primer commit - Subida inicial desde local

--- a/inicio.html
+++ b/inicio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio - SIEAP</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,600;1,400&display=swap');
@@ -56,6 +57,7 @@
       <div><ion-icon name="people-outline"></ion-icon><a href="Citas.html" class="option">Citas</a></div>
       <div><ion-icon name="eye-outline"></ion-icon><a href="Observaciones.html" class="option">Observaciones</a></div>
       <div><ion-icon name="paper-plane-outline"></ion-icon><a href="Canalizaciones.html" class="option">Canalizaciones</a></div>
+      <div><ion-icon name="information-circle-outline"></ion-icon><a href="nosotros.html" class="option">Nosotros</a></div>
     </div>
   </aside>
 
